@@ -1,3 +1,8 @@
+Tue Mar 30 10:33:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* common.mk (COMMONOBJS): moved dln.o to OBJS not to conflict with
+	  dmydln.o.
+
 Tue Mar 30 02:40:31 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* prelude.rb (Process.daemon): New method.
